--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -17,19 +17,26 @@
         <h4>Your Notes : </h4>
         <br>
         <div class="notes">
-            {% for note in notes %}
-                <div class="note" style="background:{{note.color}}">
-                    <h6 class="note_title">{{note.title}}</h6>
-                    <hr>
-                    <p class="note_description">{{note.description}}</p>
-                    <br>
-                    <div class="buttons">
-                        <a href="{% url 'edit_note' note.id %}" class="btn edit-btn">Edit</a>
-                        <a href="{% url 'delete_note' note.id %}" class="btn delete-btn">Delete</a>
-                    </div>
-                    
+            {% if notes|length == 0 %}
+                <div class="note">
+                    Your notes will appear here
                 </div>
-            {% endfor %}
+            {% else %}
+                {% for note in notes %}
+                    <div class="note" style="background:{{note.color}}">
+                        <h6 class="note_title">{{note.title}}</h6>
+                        <hr>
+                        <p class="note_description">{{note.description}}</p>
+                        <br>
+                        <div class="buttons">
+                            <a href="{% url 'edit_note' note.id %}" class="btn edit-btn">Edit</a>
+                            <a href="{% url 'delete_note' note.id %}" class="btn delete-btn">Delete</a>
+                        </div>
+                        
+                    </div>
+                {% endfor %}
+            {% endif %}
+            
         </div>
         
     </div>
