--- a/notes/templates/notes/index.html
+++ b/notes/templates/notes/index.html
@@ -18,7 +18,7 @@
         <br>
         <div class="notes">
             {% if notes|length == 0 %}
-                <div class="note">
+                <div class="note" style="background:#ECECEC">
                     Your notes will appear here
                 </div>
             {% else %}
