--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -79,7 +79,7 @@
             </div>
             <div class="contact">
                 <a href="mailto:panduvishwas@gmail.com"><span class="fa fa-envelope"></span> panduvishwas@gmail.com</a>
-                <p><span class="fa fa-mobile"></span> 6302643684</p>
+                <!-- <p><span class="fa fa-mobile"></span> 6302643684</p> -->
             </div>
         </div>
     </footer>
